fixed centering jumps
added code to force scroll bar

--- a/style.css
+++ b/style.css
@@ -155,3 +155,9 @@ a:hover, a:active {
 /*	END CONTACT INFO STYLE
 	************************************* 
 */
+
+
+/* centering jump fix*/
+html {
+  overflow-y: scroll;
+}
